css/styles.css
body {
  background: linear-gradient(rgba(06, 43, 75, 0.23), rgba(169, 209, 243, 0.23));
}

.jumbotron {
  /* background-image: url("/C:/programming/epicodus/media-queries-and-responsive-design/week-in-review/img/Portland_Night_panorama.jpg"); */
/************************************ FIX IMAGE URL ****************************************************/
  background-image: url("../img/Portland_Night_panorama.jpg");
  background-size: cover;
  border-radius: 3.5em;
  border: 2px solid gray;
  padding: .5em;
  margin-top: 10px;
  margin: 10px, 10px, 10px, 10px;
  float: inherit;
  min-width: 300px;
  z-index: 20;
}

.para {
  margin-right: 20%;
}

.emphasize {
  font-size: 1.25em;
}

.emphasize strong {
  font-size: 1.25em;
  font-weight: bolder;
}

.about-link {
  visibility: hidden;
  /* display: none; */
}

/***********************************************************/

/* .test li:hover { */
  /* background-color: chartreuse; */
  /* width: 12em; */
/* } */

li .test-block:hover {
  /* Hovers over just the list item words and highlights them.  */
  /* This way there is no removal of the element from the flow. */
  display: inline;
  background-color: turquoise;
}

/* .test-block:hover + #writer-block {
  visibility: visible;
  display: block;
  background-color: red;
} */

.talent-panel {
  color: black;
  background-color: rgb(103,147,171); /* #find a better color soon! */
  margin: 1em;
  border-radius: 1.5em;
  border: 4px solid black; /* #find a better color soon! */
  padding: 5em;
  height: 15em;
  width: 35em;
  position: fixed;
  top: 35%;
  left: 33%;
  right: 33%;
  float: left;
  z-index: 1000;
}

#follow-writer {
  display: none;
}
#follow-editor {
  display: none;
}

#follow-consultant {
  display: none;
}

#follow-localizer {
  display: none;
}

#follow-trades {
  display: none;
}

li span:hover + #follow-writer {
  display: block;
}

li span:hover + #follow-editor {
  display: block;
}

li span:hover + #follow-consultant {
  display: block;
}

li span:hover + #follow-localizer {
  display: block;
}

li span:hover + #follow-trades {
  display: block;
}


#follow-games {
  display: none;
}
#follow-rpgs {
  display: none;
}

#follow-music {
  display: none;
}

#follow-programming {
  display: none;
}

#follow-supernatural {
  display: none;
}

li span:hover + #follow-games {
  display: block;
}

li span:hover + #follow-rpgs {
  display: block;
}

li span:hover + #follow-music {
  display: block;
}

li span:hover + #follow-programming {
  display: block;
}

li span:hover + #follow-supernatural {
  display: block;
}

#follow-project-manager {
  display: none;
}
#follow-co-founder {
  display: none;
}

#follow-tripwire {
  display: none;
}

#follow-lead {
  display: none;
}

#follow-qa {
  display: none;
}

#follow-owner {
  display: none;
}

#follow-analyst {
  display: none;
}

li span:hover + #follow-project-manager {
  display: block;
}

li span:hover + #follow-co-founder {
  display: block;
}

li span:hover + #follow-tripwire {
  display: block;
}

li span:hover + #follow-lead {
  display: block;
}

li span:hover + #follow-qa {
  display: block;
}

li span:hover + #follow-owner {
  display: block;
}

li span:hover + #follow-analyst {
  display: block;
}
/* .test:hover {
  background-color: red;
} */

#writer-block {
  /* visibility: hidden; */
  /* display: none; */
  float: left;
  position: absolute;
}

#writer-block:hover {
  background-color: red;
  /* visibility: hidden; */
  display: none;
}

/* #whatever .test .test-block:hover ~ .test-div {
  background-color: purple;
} */

/* #btn:hover + .zz {} */


/************************************************************/


/* .about-me:hover {
  background-color: turquoise;
  /* visibility: visible; */
  /* display: inline; */
  /* width: 12em;
} */

.block {
  display: block;
  margin-right: 5em;
  clear: right;
}


/* #writer:hover ~ .writer-block {
  visibility: visible;
  display: block;
} */

/* .zz {
  text-align: center;
  line-height: 100px;
  font-size: 20px;
  font-weight: bold;
  width: 100px;
  height: 100px;
  color: white;
  background: red;
  border: 4px solid black;
  margin: 100px;
  -webkit-transition: transform 1s;
  -webkit-transition-timing: ease-in-out;
  -webkit-transition-delay: 0.1s;
  float: left;
}
 */
/* #btn:hover + .zz {
  background: green;
  -webkit-transform: rotate(40deg) translate(100px, 20px);
} */

/* #writer:hover ~ .writer-block {
  background: green;
  -webkit-transform: rotate(40deg) translate(100px, 20px);
} */

/* #writer:hover {
  color: red;
} */

/* #writer:hover ~ li {
  color: red;
} */




/* #writer:hover + .zz {
  background: green;
  -webkit-transform: rotate(40deg) translate(100px, 20px);
} */


.backdrop {
  background-color: rgba(0, 0, 255, 0.5);
  color: #ffffff;
}

.background-gradient {
  background: linear-gradient(rgba(06, 43, 75, 0.5), rgba(169, 209, 243, 0.5));
}

.pic {
  min-width: 13%;
  max-width: 22%;
  /* position: absolute; */
  /* float: right; */
}

.portrait {
  min-width: 13%;
  max-width: 22%;
  top: auto;
  left: auto;
  position: absolute;
  z-index: 25;
  float: right;
  right: 5em;
  margin-right: 10em;
  top: 4.5em;
  width: 120px;
  border: 5px solid gray;
  clear: left;
}

.plaque {
  width: 52%;
  float: left;
  position: absolute;
  top: 88%;
  left: 25%;
  z-index: 10;
  font-weight: bolder;
  text-align: center;
  margin: auto;
  border: 5px solid #96724e;
  padding: .3em;
  background-color: rgba(165, 146, 62, .65)
}

.panel-box {
  margin-top: 0px;
  margin-bottom: 70px;
  margin-left: 2px;
  margin-right: 2px;
  border: 2px solid gray;
  padding: 24px;
}

.space-l {
  margin-left: .5em;
}

.panel-body {
  margin-top: 10px;
  margin-bottom: 45px;
  margin-right: 13px;
  border: 2px solid gray;
  padding: 24px;
  background-color: rgba(133, 166, 243, 0.5);
  color: #041F2E;
}

.panel-body h2 {
  display: block;
  background-color: rgba(0, 0, 100, 0.25);
}

.boxy {
  margin: 5, 5, 5, 5;
  border: 2px solid gray;
  padding: 14px;
  background-color: rgba(133, 166, 243, 0.5);
}

.space-left {
  position: relative;
  float: left;
  width: 88%;
}

.margin-left {
  /* margin-left: 33%; */
  /* margin-left: 15%;*/
  margin-left: 50px;
}

.margin-right {
  /* margin-left: 33%; */
  /* margin-right: 15%; */
  margin-right: 50px;
}

.space-right {
  float: right;
  position: absolute;
  width: 57%
}

/*h1, h2, h3, p {
  background-color: rgba(0, 0, 255, 0.5);
  color: #ffffff;
}*/

/*body {
  background-image: url("/C:/programming/epicodus/media-queries-and-responsive-design/week-in-review/img/Made_in_Oregon_sign_in_2011_-_Portland_Oregon.JPG");
  background-size: cover;
  background-repeat: no-repeat;
  background-color: rgba(255,255,0,0.275);
}
/*
@media screen and (min-width: 768px) {
  .column {
    width: 300px;
    float: left;
    padding: 20px;
  }
}
@media screen and (max-width: 768px) and (min-width: 600px) {
  body {
    background-color: black;
    color: white;
  }
}

@media screen and (max-width: 480px) {
  body {
    background-color: teal;
  }
}

*/

